--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
+    "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
+    "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook"
@@ -84,7 +87,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "reg-cli": "^0.17.6"
   },
   "loki": {
     "configurations": {
